# velox

./: CMakeLists.txt
velox/benchmarks/basic/: CMakeLists.txt  ContainsNullBenchmark.cpp
velox/common/memory/: Memory.cpp  Memory.h
velox/core/: PlanNode.cpp  PlanNode.h  QueryConfig.h
velox/docs/functions/: array.rst
velox/examples/: BatchBuilderDemo.cpp  BigLeftJoin.cpp  Boltrain.cpp  Boltrain.h  CMakeLists.txt  GenericSource.cpp  GenericSource.h  KafkaConnector.cpp  KafkaConnector.h  KafkaTest.cpp  VectorWriterDemo.cpp
velox/examples/paimon/: CMakeLists.txt  Demo.cpp  PaimonConnector.cpp  PaimonConnector.h  PaimonConnectorSplit.h  PaimonDataSource.cpp  PaimonDataSource.h  PaimonSplitReader.h
velox/examples/paimon/tests/: CMakeLists.txt  PaimonConnectorTest.cpp  PaimonReadTest.cpp
velox/exec/: CMakeLists.txt  Driver.cpp  Driver.h  HybridSortBuffer.cpp  HybridSortBuffer.h  LeftMergeJoin.cpp  LeftMergeJoin.h  LocalPlanner.cpp  MaterializedSortBuffer.cpp  MaterializedSortBuffer.h  MergeSource.cpp  MergeSource.h  NonMaterializedSortBuffer.cpp  NonMaterializedSortBuffer.h  Operator.cpp  Operator.h  OperatorUtils.cpp  OrderBy.cpp  QuerySplitReader.cpp  QuerySplitReader.h  SortBuffer.cpp  SortBuffer.h  SortBufferBase.cpp  SortBufferBase.h  Spill.cpp  Spill.h  TableWriter.cpp  Task.cpp  Task.h  VectorGrouping.cpp  VectorGrouping.h
velox/exec/benchmarks/: OrderByBenchmark.cpp
velox/exec/tests/: CMakeLists.txt  LeftMergeJoinTest.cpp  NonMaterializedSortBufferTest.cpp  OrderByTest.cpp  QueryTracerTest.cpp  SortBufferTest.cpp  SpillMergerBenchmarkBase.cpp  SpillMergerBenchmarkBase.h  SpillMergerBenchmarkTest.cpp  VectorGroupingTest.cpp  VeloxExpressionEvalDemo.cpp  VeloxVectorIndicesDemo.cpp
velox/exec/trace/: CMakeLists.txt  QueryDataReader.cpp  QueryDataReader.h  QueryDataWriter.cpp  QueryDataWriter.h  QueryMetadataReader.cpp  QueryMetadataReader.h  QueryMetadataWriter.cpp  QueryMetadataWriter.h  QueryTraceConfig.cpp  QueryTraceConfig.h  QueryTraceRestore.cpp
velox/expression/: LambdaExpr.cpp
velox/functions/prestosql/: ArrayAllMatch.cpp  ArrayHasDuplicates.cpp  CMakeLists.txt
velox/tool/trace/: CMakeLists.txt  MaxwellLeftJoin.cpp  TraceReplayTaskRunner.cpp
velox/vector/: ContainsNull.h
velox/vector/tests/: ContainsNull.cpp
(+7 files in other folders)
